# aitest_guard

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt  run_example.py
.aitest/: policy.yaml
aitest_guard/: __init__.py  analyzer.py  cli.py  generator.py  integration_analyzer.py  integration_checker.py  policy.py  quality_checker.py  scenario_checker.py  weak_detector.py
aitest_guard/agents/: __init__.py  code_agent.py  guard_agent.py  orchestrator.py  test_agent.py
aitest_guard/audit/: __init__.py  audit_logger.py
aitest_guard/engine/: __init__.py  enforcement_decision.py  validator_registry.py
aitest_guard/governance/: __init__.py  ai_output_validator.py  base_validator.py  deterministic_format_validator.py  edge_case_ratio_validator.py  requirement_validator.py  security_validator.py  traceability_validator.py  vague_phrase_validator.py
aitest_guard/llm/: __init__.py  base.py  halo_provider.py  openai_provider.py
aitest_guard/llm_governance/: __init__.py  architecture_analyzer.py  concurrency_analyzer.py  llm_engine.py  llm_models.py  llm_response_parser.py  mock_abuse_detector.py  orchestrator.py  prompt_builder.py  semantic_analyzer.py
aitest_guard/models/: __init__.py  artifact_model.py  requirement_model.py  test_case_model.py  violation_model.py
aitest_guard/scoring/: __init__.py  risk_engine.py  severity.py
example_api/: __init__.py  app.py  calculator.py  validator.py
tests/: test_calculator.py  test_validator.py
tests/integration/: test_app.py
